# uzd3

./: CMakeLists.txt  Funkcijos_Strukturos.h  README.md  duomenu_apdorojimas.cpp  duomenu_apdorojimas.h  duomenu_operacijos.cpp  duomenu_operacijos.h  failu_tvarkymas.cpp  failu_tvarkymas.h  funkcijos_strukturos.h  main.cpp  masyvo.cpp  skaiciavimai.cpp  skaiciavimai.h  strukturos.h  vectoriu.cpp  vectoriu_failai.cpp
doxygen/: annotated.html  class_studentas-members.html  class_studentas.html  class_zmogus-members.html  class_zmogus.html  classes.html  dir_5c0f0fd434978537810ca7861b4725ed.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  klases_8cpp.html  klases_8cpp_source.html  klases_8h.html  klases_8h_source.html  klases__duomenu__apdorojimas_8cpp.html  klases__duomenu__apdorojimas_8cpp_source.html  klases__duomenu__apdorojimas_8h.html  klases__duomenu__apdorojimas_8h_source.html
headers/: CMakeLists.txt  failu_tvarkymas.cpp  skaiciavimai.cpp  skaiciavimai.h
klases/: klases.cpp  klases.h  klases_duomenu_apdorojimas.cpp  klases_duomenu_apdorojimas.h
list/: antras_duomenu_apdorojimas.cpp  antras_duomenu_apdorojimas.h  antras_failu_tvarkymas.cpp  antras_failu_tvarkymas.h  duomenu_apdorojimas.cpp  failu_tvarkymas.cpp
vector/: antras_duomenu_apdorojimas_vector.cpp  antras_duomenu_apdorojimas_vector.h  antras_failu_tvarkymas_vector.cpp  antras_failu_tvarkymas_vector.h  duomenu_apdorojimas.cpp  duomenu_apdorojimas.h  duomenu_apdorojimas_vector.cpp  duomenu_apdorojimas_vector.h  failu_tvarkymas_vector.cpp  skaiciavimai.h  (+6 more)
(+14 files in other folders)
